--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
     --right-bg-color: rgba(0,0,255,1);
     --left-btn-hover-color: rgba(0,0,0,1);
     --right-btn-hover-color: rgba(0,0,0,1);
+    --hover-width: 75%;
+    --other-width: 25%;
+    --speed: 100ms;
 }
 
 *{
@@ -98,4 +101,39 @@ h1{
     width: 100%;
     height: 100%;
     background-color: var(--right-bg-color);
+}
+
+.split.right, 
+.split-left, 
+.split.right::before, 
+.split.left::before{
+    transform: all var(--speed) ease-in-out;
+}
+
+.hover-left .left{
+    width: var(--hover-width);
+}
+
+.hover-left .right{
+    width: var(--other-width);
+}
+
+.hover-right .left{
+    width: var(--hover-width);
+}
+
+.hover-right .right{
+    width: var(--other-width);
+}
+
+@media (max-width: 800px){
+    h1{
+        font-size: 2rem;
+        top: 30%;
+    }
+
+    .btn{
+        padding: 1.2rem;
+        width: 12rem;
+    }
 }
