Changed the urls of the pictures.

--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ h1{
 
 .split.left{
     left: 0;
-    background: url('https://images.app.goo.gl/kV1eiahbaSFkRK2g8');
+    background: url('coke.jpg');
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -90,7 +90,7 @@ h1{
 
 .split.right{
     right: 0;
-    background: url('https://images.app.goo.gl/any39tLzPKyigjqi9');
+    background: url('pepsi.png');
     background-repeat: no-repeat;
     background-size: cover;
 }
