--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
 :root{
-    --left-bg-color: rgba(255,0,0,1);
-    --right-bg-color: rgba(0,0,255,1);
+    /* --left-bg-color: rgba(255,0,0,1);
+    --right-bg-color: rgba(0,0,255,1); */
     --left-btn-hover-color: rgba(0,0,0,1);
     --right-btn-hover-color: rgba(0,0,0,1);
     --hover-width: 75%;
